# instabrand

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  package.json
apps/fast/: Cargo.toml
apps/fast-frontend/: package.json
apps/fast-frontend/src/lib/: bindings.ts  client.ts
apps/fast-frontend/src/routes/: +page.server.ts  +page.svelte
apps/fast/src/: main.rs  prisma.rs
apps/fast/src/api/: mod.rs
apps/fast/src/cart/: cart.rs  mod.rs  router.rs
apps/fast/src/image/: image.rs
apps/fast/src/order/: mod.rs  order.rs
apps/fast/src/product/: mod.rs  product.rs  router.rs  service.rs
apps/fast/src/state/: router.rs
apps/fast/src/variant/: variant.rs
apps/server/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  esbuild.js  jest.config.js  package.json  reset-dev.sh  tsconfig.json
apps/server/__tests__/: factories.ts  helpers.ts  mock.ts  setup.ts  test-client.ts
apps/server/__tests__/example-data/: google-response.ts  linkedin-responses.ts
apps/server/__tests__/integration/: variant.service.test.ts
apps/server/__tests__/unit/: cart.service.test.ts  variant.service.test.ts
apps/server/ops/load-testing/: script.js
apps/server/prisma/: data.ts
apps/server/src/: apollo-server.ts  app.ts  index.ts  koa-context.d.ts  resolvers.ts  server.ts
apps/server/src/modules/activation/: activation.mailable.tsx  activation.service.ts
apps/server/src/modules/address/: address.resolver.ts  address.schema.ts  address.service.ts
apps/server/src/modules/brand/: brand.resolver.ts  brand.schemas.ts  brand.service.ts
apps/server/src/utils/: color.ts
apps/store/: package.json  tailwind.config.cjs  vite.config.ts
apps/store/src/: app.css  app.d.ts  colors.cjs  hooks.server.ts  vars.css
apps/store/src/lib/: bindings.ts  client.ts  request.ts  types.ts
apps/store/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
prisma/: schema.prisma
prisma/migrations/20230407150144_/: migration.sql
prisma/migrations/20230407204401_/: migration.sql
(+104 files in other folders)
