[package]
name = "fast"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
publish = false

[dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.6.12"
rspc = { workspace = true }
prisma-client-rust = { workspace = true }
dotenv = "0.15.0"
tower-http = { version = "0.4.0", features = ["cors"] }
serde = "1.0.159"
ulid = "1.0.0"
tower-cookies = "0.9.0"
axum-sessions = "0.5.0"
rand = "0.8.5"
async-stripe = { version = "0.21.0", features = ["runtime-tokio-hyper"] }
hyper = { version = "0.14", default-features = false, features = ["http1", "http2", "client", "tcp"], optional = true }
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.24.0", default-features = false, features = ["http1", "http2", "tls12", "logging"], optional = true }

[package.metadata.pkg-config]
openssl = "3.0.8"
